# old_mobo_bot

./: README.md  git_setup.md
mobo_bot_description/: CMakeLists.txt  package.xml
mobo_bot_description/config/: diff_drive_controller.yaml  ekf.yaml  ekf_fuse_imu_odom.yaml  gazebo_params.yaml  robot_sim.rviz  robot_view.rviz  robot_view_sim.rviz  sim_robot_with_rviz.config.rviz  sim_with_empty_world.config.rviz  sim_with_test_world.config.rviz  urdf_view.config.rviz  view_urdf.rviz  view_urdf1.rviz  view_urdf2.rviz
mobo_bot_description/launch/: ekf_fuse_imu_odom.launch.py  rsp.launch.py  rviz.launch.py  rviz_sim.launch.py  rviz_sim_with_empty_world.launch.py  rviz_sim_with_test_world.launch.py  rviz_urdf_view.launch.py  rviz_view.launch.py  sim.launch.py  sim_and_rviz.launch.py  sim_robot.launch.py  sim_robot_with_rviz.launch.py  sim_with_empty_world.launch.py  sim_with_test_world.launch.py  sim_with_world.launch.py  spawn.launch.py  spawn_and_view.launch.py  start_ekf.launch.py  view.launch.py
mobo_bot_description/meshes/: wheel.stl
mobo_bot_description/urdf/: color_macros.xacro  gazebo_controllers.xacro  inertia_macros.xacro  part_macros.xacro  robot_core.xacro  robot_urdf.xacro  urdf_description.xacro
mobo_bot_description/world/: simple_line_track.world  test_world.world
mobo_bot_line_following/: package.xml  setup.cfg  setup.py
mobo_bot_line_following/launch/: sim.launch.py
mobo_bot_line_following/mobo_bot_line_following/: command_robot.py  follow_line.py  read_camera.py
mobo_bot_nav2d/: CMakeLists.txt  package.xml
mobo_bot_nav2d/maps/: test_map.pgm  (+1 more)
(+35 files in other folders)
